--- a/module2-solution/css/module2solution.css
+++ b/module2-solution/css/module2solution.css
@@ -68,7 +68,7 @@ h1{
    
 }
 
-@media screen and (min-width: 200px){
+@media screen and (min-width: 150px){
 
    #section1, #section2, #section3{
 
@@ -99,10 +99,20 @@ h1{
 @media screen and (min-width: 768px){
     
     #section1, #section2{
-    
-        width: 40%;
+            
+        width: 42%;    
 
-        margin: 5%;
+        margin-top: 5%;
+        
+        margin-bottom: 2%;
+
+    }
+
+    #section1{
+
+        margin-left: 5%;
+
+        margin-right: 1%;
 
     }
 
@@ -110,7 +120,7 @@ h1{
 
         width: 90%;
 
-        margin: 5%;
+        margin: 0 5% 0 5%;
 
     }
 
